add code the-hero-editor #3 (#15)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
  create-project
 <h1>{{title}}</h1>
 
+ the-hero-editor
+ the-hero-editor
+
  display-list
+ develop
 <app-heroes></app-heroes>
 
 <h1>{{title}}</h1>
